--- a/frontend_react/.github/workflows/workflow.yml
+++ b/frontend_react/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
         node-version: [15.x]
 
     steps:
-      - name: Checklout
+      - name: Checkout
         uses: actions/checkout@v1
       
       - name: Install and build
