--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,11 +18,12 @@ jobs:
         uses: actions/checkout@v1
       
       - name: Install and build
+        working-directory: ./frontend_react
         run: npm install && npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: frontend_react/build # The folder the action should deploy.
+          folder: ./frontend_react/build # The folder the action should deploy.
 
